<resources>
    <string name="app_name">Cartão de Visita</string>

    <string name="fragment_show_title">~~~~Cartões de Acesso~~~~</string>
    <string name="fragment_add_cards_title">|Adicionar Novo Cartão|</string>

    <string name="cd_fragment_show_cards">Título dos Cartões de Acesso</string>
    <string name="cd_btn_add_cards">Adicionar cartões</string>
    <string name="cd_add_title">Título adicionar novo cartão</string>
    <string name="cd_btn_return">Retorno</string>
    <string name="cd_person">Pessoa</string>

    <string name="label_name">Nome:</string>
    <string name="label_nationality">Nacionalidade:</string>
    <string name="label_telephone">Telefone:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_document">Documento:</string>
    <string name="label_expiration_date">Validade:</string>

    <string name="txt_btn_add">Adicionar</string>

</resources>