<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="passport"
            type="com.jordan.passportcard.domain.entity.PassportCard" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_avatar_person"
                    android:layout_width="102dp"
                    android:layout_height="93dp"
                    android:contentDescription="@string/cd_person"
                    android:src="@drawable/ic_flag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_nationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{passport.nationality}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/iv_avatar_person"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Brasileiro(a)" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/label_name"
                    android:textSize="@dimen/size_tv_cards"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nationality" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/label_email"
                    android:textSize="@dimen/size_tv_cards"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <TextView
                    android:id="@+id/tv_document"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/label_document"
                    android:textSize="@dimen/size_tv_cards"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email" />

                <TextView
                    android:id="@+id/tv_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/label_telephone"
                    android:textSize="@dimen/size_tv_cards"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_document"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_document" />

                <TextView
                    android:id="@+id/tv_expiration_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/label_expiration_date"
                    android:textSize="@dimen/size_tv_cards"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_telephone_input" />

                <TextView
                    android:id="@+id/tv_name_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:layout_marginTop="16dp"
                    android:text="@{passport.name}"
                    android:textSize="@dimen/size_tv_cards"
                    app:layout_constraintHorizontal_bias="0.467"
                    app:layout_constraintStart_toEndOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nationality"
                    tools:text="Jordan Rodrigues Moura" />

                <TextView
                    android:id="@+id/tv_email_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@{passport.email}"
                    android:textSize="@dimen/size_tv_cards"
                    app:layout_constraintStart_toEndOf="@+id/tv_email"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_input"
                    tools:text="jordan.moura16@gmail.com" />

                <TextView
                    android:id="@+id/tv_document_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@{passport.document}"
                    android:textSize="@dimen/size_tv_cards"
                    app:layout_constraintStart_toEndOf="@+id/tv_document"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email_input"
                    tools:text="745.738.578-78" />

                <TextView
                    android:id="@+id/tv_telephone_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@{passport.telephone}"
                    android:textSize="@dimen/size_tv_cards"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_telephone"
                    app:layout_constraintTop_toBottomOf="@+id/tv_document_input"
                    tools:text="(11) 91111-1111" />

                <TextView
                    android:id="@+id/tv_expiration_date_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@{passport.expiration}"
                    android:textSize="@dimen/size_tv_cards"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_expiration_date"
                    tools:text="11/12/2020" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>